# obsee

./: .env.example  .gitignore  .vercelignore  AGENTS.md  OBSREC_PLANNING.md  README.md  README_AUDIO.md  eslint.config.mjs  index-demo.html  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  tsconfig.main.json  vercel.json  vite.config.ts
.github/workflows/: security.yml
api/: audio-profile.ts  console-profile.ts  explanation.ts  health.ts  recommendation.ts  web-search.test.ts  web-search.ts
api/_lib/: ai-provider.test.ts  ai-provider.ts  groq.test.ts  groq.ts  http.test.ts  (+5 more)
docs/: apuntes.md
obs-plugin/: CMakeLists.txt  README.md
obs-plugin/cmake/: Info.plist.in
obs-plugin/data/locale/: en-US.ini  es-ES.ini
obs-plugin/src/: plugin-main.c
plans/: 001-arreglar-modo-dev.md  001-characterize-hardware-acquisition.md  002-limpiar-codigo-muerto.md  002-require-confirmed-ram.md  003-base-de-tests.md  003-confirm-cpu-core-count.md  004-actualizar-electron.md  004-preserve-unknown-hardware-values.md  005-encoder-aware-local-policy.md  005-notificar-desconexion-obs.md  006-accesibilidad-ux-idioma.md  006-secure-local-secret-handling.md  007-patch-audited-dependencies.md  007-respaldo-y-confirmacion.md  008-audio-etapa-2.md  008-reject-cross-site-ai-requests.md  009-enforce-distributed-rate-limits.md  010-contain-untrusted-web-evidence.md  011-enforce-production-csp.md  README.md
public/: index.html  robots.txt  sitemap.xml
scripts/: check-csp.mjs  clean-main-dist.mjs  local-api-plugin.ts  test-ai-backend.mjs
(+73 files in other folders)
